unix/lang/tests/error/malloc_overflow.yab
#expect# To be seen
dim x(1073741824)
